# subscribe.evanchen.cc

./: .gitignore  Makefile  README.md  main.py  manage.py  prek.toml  pyproject.toml
.github/workflows/: django-deploy.yml
config/: settings.py  urls.py
list/: asgi.py  settings.py  wsgi.py
mailing/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_subscriberemail_custom_greeting_subscriberemail_name.py
mailing/templates/mailing/: bad_token.html  base.html  confirm_action.html  confirmation_sent.html  done.html  error.html  index.html  subscribe_form.html
subscribe/: asgi.py  settings.py  urls.py  wsgi.py
templates/allauth/layouts/: base.html
