[project]
name = "subscribe-evanchen-cc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Evan Chen", email = "evan@evanchen.cc" }
]
license = "MIT"
urls = { repository = "https://github.com/vEnhance/subscribe.evanchen.cc" }
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "django-allauth[socialaccount]>=65.15.1",
    "django-extensions>=4.1",
    "python-decouple>=3.8",
]

[tool.djlint]
profile = "django"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "werkzeug>=3.1.8",
]
