[project]
name = "list-evanchen-cc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Evan Chen", email = "evan@evanchen.cc" }
]
license = "MIT"
urls = { repository = "https://github.com/vEnhance/list.evanchen.cc" }
requires-python = ">=3.13,<3.14"
dependencies = [
    "django>=6.0.4",
    "django-allauth[socialaccount]>=65.16.1",
    "django-discordo>=1.0.0",
    "django-extensions>=4.1",
    "django-stubs>=6.0.3",
    "python-dotenv>=1.2.2",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.djlint]
profile = "django"

[project.optional-dependencies]
prod = [
    "mysqlclient>=2.2.8",
]

[dependency-groups]
dev = [
    "prek>=0.3.9",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "werkzeug>=3.1.8",
]
